# Fastlearner

./: .env.example  .gitignore  .prettierignore  Cargo.toml  PROGRESS.md  README.md  adaptive-learning-app-spec.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  controller.rs  lib.rs  main.rs  wake_runtime.rs
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py  helpers.py  script.py.mako
services/api/alembic/versions/: 0001_identity.py  0002_curriculum.py  0003_work.py  0004_learning.py  0005_memory_vector.py  0006_actions.py  0007_outbox.py  0008_lifecycle.py  0009_operations.py  0010_constraints.py  0011_owner_indexes.py  __init__.py
services/api/app/: __init__.py  clock.py  config.py  main.py
services/api/app/adapters/: __init__.py  ai.py  files.py  graph.py
services/api/app/api/: __init__.py  dependencies.py  errors.py  middleware.py  schemas.py  serialization.py
services/api/app/auth/: __init__.py  identity.py  policy.py  sessions.py
services/api/app/commands/: __init__.py  seed.py
services/api/app/devtools/: __init__.py  local.py
services/api/app/domain/: __init__.py  ai.py  curriculum.py  graph.py  identity.py  learning.py  memory.py  planner.py  retrieval.py  work.py
services/api/app/persistence/: __init__.py  checks.py  cli.py  curriculum_pack.py  migrations.py  models.py  seeds.py
services/api/app/repositories/: __init__.py  audit.py  chunks.py  (+10 more)
services/api/tests/: test_ai_provider.py  test_api_identity.py  test_authorization.py  test_config.py  test_curriculum.py  test_graph_memory.py  test_health.py  test_identity.py  test_learning.py  test_local_dev.py  test_memory.py  test_persistence.py  test_planner.py  test_retrieval.py  test_work.py  test_workflow_primitives.py
(+59 files in other folders)
