[project]
name = "fastlearner-api"
version = "0.1.0"
description = "FastLearner application API"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.15.1",
  "fastapi==0.115.12",
  "pgvector==0.3.6",
  "psycopg[binary]==3.2.6",
  "pydantic-settings==2.8.1",
  "sqlalchemy==2.0.39",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==1.15.0",
  "pytest==8.3.5",
  "ruff==0.11.2",
]

[project.scripts]
fastlearner-db = "app.persistence.cli:main"

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
