[package]
name = "fastlearner-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "fastlearner_desktop_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
wake-detector = { path = "../../../crates/wake-detector" }
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
